[gd_scene load_steps=2 format=3 uid="uid://bueb4ntn7fj08"]

[ext_resource type="Script" path="res://gd/Menu.gd" id="1_ijnwq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ijnwq")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.5
offset_top = -130.0
offset_right = 166.5
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Pause" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -103.0
offset_right = 103.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "== PAUSED =="

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = 77.0
offset_right = 24.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="Replay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -5.5
offset_right = 31.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "Replay"

[node name="Fullscreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = 36.0
offset_right = 46.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "Fullscreen"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -45.0
offset_right = 46.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
